fix triangle color on homepage

--- a/html/assets/css/theme.css
+++ b/html/assets/css/theme.css
@@ -9084,7 +9084,7 @@ section {
   .bg-triangle.bg-triangle-bottom-left {
     transform: scaleX(-1); }
   .bg-triangle.bg-dark polygon {
-    fill: #F0D7D1; }
+    fill: #DFC9C4; }
   .bg-triangle.bg-secondary polygon {
     fill: #6c757d; }
   .bg-triangle.bg-primary polygon {
